<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/heightWeightLayoutBackground"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/image_view_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height_width"
        android:layout_alignParentTop="true"
        app:srcCompat="@color/line_color" />

    <LinearLayout
        android:id="@+id/layout_weight_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_top"
        android:layout_marginStart="@dimen/weight_margin_start"
        android:layout_marginTop="@dimen/weight_margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_weight_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/text_weight"
            android:textSize="@dimen/weight_text_size" />

        <ImageView
            android:id="@+id/iv_weight_unit_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_drop_down_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/weight_text_margin_top"
            android:layout_marginEnd="@dimen/weight_text_margin_end"
            android:text="@string/text_value_weight"
            android:textSize="@dimen/weight_text_size" />

        <TextView
            android:id="@+id/tv_weight_unit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/weight_text_margin_end"
            android:text="@string/text_weight_unit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tv_weight"
            app:layout_constraintTop_toBottomOf="@+id/tv_weight" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image_view_mid"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/line_margin_top"
        app:srcCompat="@color/line_color" />

    <LinearLayout
        android:id="@+id/layout_height_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_mid"
        android:layout_marginStart="@dimen/height_margin_start"
        android:layout_marginTop="@dimen/height_margin_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/text_height"
            android:textSize="@dimen/height_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_drop_down_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_mid"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/weight_text_margin_top"
            android:layout_marginEnd="@dimen/weight_text_margin_end"
            android:text="@string/text_value_height"
            android:textSize="@dimen/height_text_size" />

        <TextView
            android:id="@+id/tv_height_unit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/weight_text_margin_end"
            android:text="@string/text_height_unit" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height_width"
        android:layout_below="@+id/layout_height_unit"
        android:layout_marginTop="@dimen/with_height_margin_top"
        app:srcCompat="@color/line_color" />

</RelativeLayout>